test-manifest/alb/myapp-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hairpin-eks-alb-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/load-balancer-name: hairpin-eks-albkub
    # alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-nginx-svc
                port:
                  number: 80
